2004-08-17  Christophe Fergeau  <teuf@gnome.org>

	* modulesets/gnome26.modules:
	* modulesets/gnome28.modules: use latest gnutls and opencdk versions

2004-08-11  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules (gnome-volume-manager): add
	gnome-volume-manager.  Patch from Darren Adams
	<darrenadams@dsl.pipex.com> in bug #149067.

	* jhbuild/frontends/tinderbox.py
	(TinderboxBuildScript.start_module): sanitize the module name for
	use as a filename.  Patch from Olav Vitters
	<bugzilla-gnome@bkor.dhs.org> in bug #148959.

	* modulesets/bootstrap.modules (libtool): update to 1.5.8
	(automake-1.9): add package.

2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* modulesets/gnome24.modules:
	* modulesets/gnome26.modules:
	* modulesets/gnome28.modules:
	  remove disable-plugin-builddir from gst-plugins

2004-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* jhbuild/frontends/buildscript.py:
	  create prefix and checkoutdir if they don't exist yet

2004-08-05  James Henstridge  <james@jamesh.id.au>

	* jhbuild/modtypes/archmodule.py (ArchModule.__init__): I got rid
	of the archmodule local here.

	* jhbuild/moduleset.py (_parse_module_set): fix up some errors in
	parsing <arch-archive> elements.

	* modulesets/gnome28.modules (rhythmbox): Switch over to Arch archive.

	* jhbuild/utils/arch.py (ArchArchive.update): forgot to update
	this after renaming get_branch to get_revision.
	(ArchArchive.get_revision): fix up a typo.

2004-08-04  Mikael Hallendal  <micke@imendio.com>

	* modulesets/gnome26.modules: Use gnome-2-6 for libgail-gnome

2004-08-02  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome28.modules: Make libgnomeprint
	depend on libgnomecups.

2004-08-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* modulesets/gnome28.modules: Added gnome-nettool module.

2004-07-30  Anders Carlsson  <andersca@gnome.org>

	* modulesets/gnome28.modules: Remove gnome-mime-data.
