@@ -27,4 +27,3 @@ os.environ['INSTALL'] = os.path.join(os.environ['HOME'],
 
 #branches['libglade'] = 'libglade-gobject-support-branch'
 module_autogenargs['gimp'] = '--disable-print --enable-python'
-
