@@ -1,3 +1,12 @@
+2004-08-17  James Henstridge  <james@jamesh.id.au>
+
+	Based on patch on bug 145393 by Thomas Fitzsimmons:
+
+	* jhbuild/config.py (prependpath): function to store path values
+	that will be prepended to various environment variables after
+	jhbuild has prepended its values.
+	(Config.setup_env): process the prepend values.
+
 2004-08-17  Christophe Fergeau  <teuf@gnome.org>
 
 	* modulesets/gnome26.modules:
